<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">WAFT</string>
    <string name="baseUrl" translatable="false">https://storage.googleapis.com/emergency-json/</string>
    <string name="register_success_popup">You have successfully signed up for membership.\nWe sent you an e-mail to sign up, so please check.Congratulations on becoming a member of \nWAFT.</string>
    <string name="recheck_gender">You need to check your gender to modify your membership information.</string>
    <string name="if_have_account">I\'m already a member of WAFT. Please check again.</string>
    <string name="ResetPass">Reset Password</string>
    <string name="forgotPassHint">Click "Reset Password".\nPlease check the reset email for this email.</string>
    <string name="success_forgot_password_message">Password reset completed. Please check the reset mail.</string>
    <string name="name">Name</string>
    <string name="nickname">NickName</string>
    <string name="email">E-mail</string>
    <string name="country">Country</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="back">Cancel</string>
    <string name="save">Save</string>
    <string name="correct_member_activity">★★ Success change profile infomation ★★</string>
    <string name="logout_cancel">Cancel</string>
    <string name="logout_success">Logout</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="title_slide1">Welcome aboard!</string>
    <string name="desc_slide1">Before using the WAFT app, let\'s start a brief introduction to \n.</string>
    <string name="title_slide2">Friendship</string>
    <string name="desc_slide2">Share your friendship with people you\'ve become close to on the trip.</string>
    <string name="title_slide3">Chatting</string>
    <string name="desc_slide3">Communicate with people who are close to you on the trip through the WAFT\'s own chat system.</string>
    <string name="title_activity_maps">Map</string>
    <string name="internet_connect">Internet connection.</string>
    <string name="internet_disconnect">Please connect me to the Internet.</string>
    <string name="on_internet_msg">There is no Internet connection! Please check the Internet connection.</string>
    <string name="category">Category</string>
    <string name="qr_code">QR-code</string>
    <string name="navigation">Navi-Map</string>
    <string name="exchange_money">Currency</string>
    <string name="chatting">Chatting</string>
    <string name="notice_manual">Notice</string>
    <string name="selecet_country_code">Present Country</string>
    <string name="on_more_time_backpress">Press one more time for exit.</string>
    <string name="press_back_main">Press one more time for go to main.</string>
    <string name="send_message">1:1 Chatting</string>
    <string name="users_profile">a profile</string>
    <string name="now_your_friend">It is currently on the friend list.</string>
    <string name="cancel_request">I canceled my friend request.</string>
    <string name="chat_room">Chatting</string>
    <string name="menu_search">Find</string>
    <string name="request_room">friend request</string>
    <string name="friendshipDate">Connected Date:\n</string>
    <string name="please_send_message">Please write down the message to send.</string>
    <string name="failed_send_message">Unable to send message.\\n Please try again.</string>
    <string name="all_friends">List of friends</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="cancel_friend_request">To cancel a friend request</string>
    <string name="accept_friend_request">To accept friend requests.</string>
    <string name="unfriend_this_person">Delete friends</string>
    <string name="enter_message">Please enter a message.</string>
    <string name="messenger_active_now">Current connection.</string>
    <string name="search_history_cleared_successfully">Deleted search.</string>
    <string name="image_upload">Uploading image…</string>
    <string name="edit_message_send">Typing your message...</string>
    <string name="qr_generator_title">Code-scan</string>
    <string name="upload">Upload</string>
    <string name="share">Sharing</string>
    <string name="download">Download</string>
    <string name="add_friend">Code-scan\n (add friends)</string>
    <string name="my_profile">My Profile</string>
    <string name="using_qr_add_me">The above code allows the other person to add me as a friend.</string>
    <string name="scan_qr_and_add_friends">Try adding friends by scanning the QR-code.</string>
    <string name="not_updated">Update is required.</string>
    <string name="usd_name">USD</string>
    <string name="usd_symbol">$</string>
    <string name="digits">0123456789,.</string>
    <string name="decimal">Please enter the amount.</string>
    <string name="num_one">1</string>
    <string name="long_aud">Australian dollar</string>
    <string name="long_bgn">Bulgarian lev</string>
    <string name="long_brl">Brasilian real</string>
    <string name="long_cad">Canadian dollar</string>
    <string name="long_chf">Swiss franc</string>
    <string name="long_cny">Chinese yuan renminbi</string>
    <string name="long_czk">Czech koruna</string>
    <string name="long_dkk">Danish krone</string>
    <string name="long_eur">Euro</string>
    <string name="long_gbp">Pound sterling</string>
    <string name="long_hkd">Hong Kong dollar</string>
    <string name="long_hrk">Croatian kuna</string>
    <string name="long_huf">Hungarian forint</string>
    <string name="long_idr">Indonesian rupiah</string>
    <string name="long_ils">Israeli shekel</string>
    <string name="long_inr">Indian rupee</string>
    <string name="long_isk">Icelandic krona</string>
    <string name="long_jpy">Japanese yen</string>
    <string name="long_krw">South Korean won</string>
    <string name="long_mxn">Mexican peso</string>
    <string name="long_myr">Malaysian ringgit</string>
    <string name="long_nok">Norwegian krone</string>
    <string name="long_nzd">New Zealand dollar</string>
    <string name="long_php">Philippine peso</string>
    <string name="long_pln">Polish zloty</string>
    <string name="long_ron">Romanian leu</string>
    <string name="long_rub">Russian rouble</string>
    <string name="long_sek">Swedish krona</string>
    <string name="long_sgd">Singapore dollar</string>
    <string name="long_thb">Thai baht</string>
    <string name="long_try">Turkish lira</string>
    <string name="long_usd">US dollar</string>
    <string name="long_zar">South African rand</string>
    <string name="updated">Update: %s</string>
    <string name="failed">Failed.</string>
    <string name="no_connection">There is no Internet connection.</string>
    <string name="need_setting">Please re-set up your Internet related settings from the above settings</string>
    <string name="no_wifi">Connect the Wi-Fi, please.</string>
    <string name="roaming">Roaming.</string>
    <string name="updating">Updating.</string>
    <string name="add">Add</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Setting</string>
    <string name="clear">Delete All</string>
    <string name="remove">Erase</string>
    <string name="chart">Chart</string>
    <string name="copy">Copy</string>
    <string name="cancel">Cancellation</string>
    <string name="select">Choice</string>
    <string name="pref_update_category">Update</string>
    <string name="pref_wifi_summ">Update using WiFi.</string>
    <string name="pref_wifi">WIFI</string>
    <string name="pref_roaming">Data(4G/5G)</string>
    <string name="pref_roaming_summ">Use the data to update</string>
    <string name="pref_select">To select</string>
    <string name="pref_select_summ">Touch to multi-select.</string>
    <string name="pref_numbers">Exchange Rate Numbers Related</string>
    <string name="pref_digit_default">3</string>
    <string name="pref_digits">Change the number of decimal places.</string>
    <string name="pref_fill_summ">Populate the chart.</string>
    <string name="pref_fill">Fill</string>
    <string name="action_invert">Change</string>
    <string name="new_chart">Create a new chart</string>
    <string name="hist">History</string>
    <string name="range">Time</string>
    <string name="week">A week</string>
    <string name="month">A month</string>
    <string name="quarter">four-week interval</string>
    <string name="year">a year</string>
    <string name="years">5 years</string>
    <string name="max">All cycles</string>
    <string name="update_failed">Update failed.</string>
    <string name="press_back_currency">Press one more time to go to the Currency Exchange.</string>
    <string name="success_save">Saved successfully: </string>
    <string name="currency_waft">WAFT currency</string>
    <string name="share_QRcode">Sharing QR-Code</string>
    <string name="need_permission">To use permissions to do.</string>
    <string name="already_qrcode_save">Already saved.</string>
    <string name="stname">Setting</string>
    <string name="notice">Notice</string>
    <string name="notice_str">Please check the notice.</string>
    <string name="theme_change">Theme change</string>
    <string name="theme_change_str">Black / White Change it to the color you want</string>
    <string name="language">Language selection</string>
    <string name="language_str">Click to go to Language Settings screen</string>
    <string name="restaurant">Restaurant</string>
    <string name="busStop">BusStop</string>
    <string name="police">Police</string>
    <string name="distance">Distance :</string>
    <string name="time">Time :</string>
    <string name="innerPosition">InnerPosition</string>
    <string name="destination">Destination</string>
    <string name="bank">Bank</string>
    <string name="gps">Do you want to use the GPS function?</string>
    <string name="gps_cancel">CANCEL</string>
    <string name="gps_success">set up</string>
    <string name="logouttx">Would you like to logout?</string>
    <string name="Configuration">Setting</string>
    <string name="emergency" tools:ignore="ExtraTranslation">Emergency</string>
    <string name="sos_police">Police :</string>
    <string name="sos_ambulance">Ambulance :</string>
    <string name="sos_fire">Fire :</string>
    <string name="sos_loading">loading emergency numbers…</string>
    <string name="chat_gender">Gender :</string>
    <string name="chat_edit_profile">Edit Profile</string>
    <string name="search_a_name">Search a name</string>
    <string name="not_found">Not found</string>
    <string name="clear_history">Clear History</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="sign_email">E-mail</string>
    <string name="sign_up">SIGN UP</string>
    <string name="confirm_pass">Confirm Pass</string>
    <string name="input_email">Enter your e-mail</string>
    <string name="correct_email_format">Please enter the correct e-mail format.</string>
    <string name="check_email">Please check your e-mail.</string>
    <string name="reset_password">Reset Password</string>
    <string name="success_login">Now login, waiting…</string>
    <string name="wrong_email_fomat">Email format is invalid.</string>
    <string name="enter_password">Please enter your password.</string>
    <string name="wrong_password_format">Password must be at least 6 digits.</string>
    <string name="wrong_emailPassword">Email and password are incorrect. Please check again.</string>
    <string name="confirm_password">Please re-enter your password.</string>
    <string name="wrong_password">Password doesn\'t match.</string>
</resources>