<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/action_invert"
            android:icon="@drawable/ic_action_invert"
            android:title="@string/action_invert"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/action_new_chart"
            android:icon="@drawable/ic_action_new_picture"
            android:title="@string/new_chart"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/action_refresh"
            android:icon="@drawable/ic_action_refresh"
            android:title="@string/refresh"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/action_hist"
            android:icon="@drawable/ic_action_time"
            android:title="@string/hist"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/action_range"
            android:icon="@drawable/ic_action_expand"
            android:title="@string/range"
            app:showAsAction="ifRoom">

        <menu>
            <group android:checkableBehavior="single">

                <item
                        android:id="@+id/action_week"
                        android:title="@string/week"/>

                <item
                        android:id="@+id/action_month"
                        android:title="@string/month"/>

                <item
                        android:id="@+id/action_quarter"
                        android:title="@string/quarter"/>

                <item
                        android:id="@+id/action_year"
                        android:title="@string/year"/>

                <item
                        android:id="@+id/action_years"
                        android:title="@string/years"/>

                <item
                        android:id="@+id/action_max"
                        android:checked="true"
                        android:title="@string/max"/>

            </group>
        </menu>
    </item>

</menu>
