<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/action_clear"
            android:icon="@drawable/ic_action_clear"
            android:title="@string/clear"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_remove"
            android:icon="@drawable/ic_action_remove"
            android:title="@string/remove"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_chart"
            android:icon="@drawable/ic_action_picture"
            android:title="@string/chart"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_copy"
            android:icon="@drawable/ic_action_copy"
            android:title="@string/copy"
            app:showAsAction="ifRoom"/>
</menu>
