<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <FrameLayout
                android:id="@+id/fl_qrscanner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/horizon_line">
        </FrameLayout>

        <TextView
                android:id="@+id/qr_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:text="@string/qr_generator_title"
                android:textSize="25dp"/>

        <ImageView
                android:id="@+id/qrImage"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/qr_title"/>

        <View
                android:id="@+id/horizon_line"
                android:layout_width="350dp"
                android:layout_height="0.3dp"
                android:layout_below="@id/qrImage"
                android:layout_centerHorizontal="true"
                android:background="#9E9E9E"/>

        <TextView
                android:id="@+id/tv_QRAddMe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/horizon_line"
                android:layout_marginTop="30dp"
                android:textAlignment="center"
                android:text="@string/using_qr_add_me"/>
        <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_QRAddMe"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">
            <LinearLayout
                    android:id="@+id/btn_scanner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">
                <Button
                        android:id="@+id/btnScanner"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/ic_qr_code_scan"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textAlignment="center"
                        android:text="@string/add_friend"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/btn_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginLeft="20dp"
                    android:orientation="vertical">
                <Button
                        android:id="@+id/btnProfile"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/ic_my_profile"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textAlignment="center"
                        android:text="@string/my_profile"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:gravity="center"
                    android:orientation="vertical">
                <Button
                        android:id="@+id/btnSave"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/ic_file_download_grey_700_36dp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_marginTop="4dp"
                        android:text="@string/download"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginLeft="20dp"
                    android:orientation="vertical">
                <Button
                        android:id="@+id/btnShare"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/ic_file_upload_grey_700_36dp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_marginTop="4dp"
                        android:text="@string/share"/>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</LinearLayout>