<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundcolor">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        tools:context=".Profile.ProfileActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/cardbackground">

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/layOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/visit_user_profile_image"
                    android:layout_width="185dp"
                    android:layout_height="185dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/default_profile_image"
                    app:civ_border_color="@color/colorPrimary"
                    app:civ_border_width="1dp" />

                <ImageView
                    android:id="@+id/visit_verified_icon"
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:layout_marginStart="151dp"
                    android:layout_marginTop="155dp"
                    android:src="@drawable/ic_check_circle"
                    android:visibility="visible" />
            </FrameLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/visitUserProfileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layOne"
            android:layout_centerInParent="true"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textColor="?attr/tintcolor"
            android:textSize="20sp"
            tools:text="이름" />

        <TextView
            android:id="@+id/visitUserProfileStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/visitUserProfileName"
            android:layout_centerInParent="true"
            android:layout_marginTop="7dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="?attr/textcolor"
            android:layout_marginBottom="20dp"
            tools:text="상태메세지" />

        <com.hbb20.CountryCodePicker
            android:id="@+id/visitUserProfileCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/visitUserProfileStatus"
            android:layout_centerInParent="true"
            app:ccp_contentColor="?attr/tintcolor"
            app:ccp_clickable="false"
            app:ccp_showArrow="false"
            app:ccp_defaultNameCode="KR"
            app:ccp_showFullName="true"
            app:ccp_showPhoneCode="false" />

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/visitUserProfileCountry"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chat_gender"
                android:textColor="?attr/tintcolor"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/visitUserProfileGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/visitUserProfileCountry"
                android:textColor="?attr/tintcolor"
                android:textSize="20sp"
                tools:text="남" />
        </LinearLayout>


        <TextView
            android:id="@+id/go_my_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear1"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/chat_edit_profile"
            android:textColor="?attr/tintcolor"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/visitUserFrndRqstSendButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="07dp"
            android:background="@drawable/ripplebutton"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/send_friend_request"
            android:textAllCaps="false"
            android:textColor="?attr/tintcolor"
            android:textSize="16sp" />

        <Button
            android:id="@+id/visitUserFrndRqstDeclineButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/visitUserFrndRqstSendButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="07dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/ripplebutton"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/cancel_friend_request"
            android:textAllCaps="false"
            android:textColor="?attr/tintcolor"
            android:textSize="16sp"

            />

    </RelativeLayout>
</ScrollView>
